--- a/canfindfrontend/index.html
+++ b/canfindfrontend/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>canfindfrontend</title>
+    <title>Explore Canada - CanFind</title>
+    <link rel="stylesheet" href="App.css" />
+    
+    <style>
+      #map {
+        height: 75vh;
+        width: 100%;
+      }
+      button {
+        margin: 10px;
+        padding: 8px 16px;
+        font-size: 14px;
+        border-radius: 8px;
+      }
+    </style>
   </head>
   <body>
+    <h1>Explore Canada</h1>
+
+    <div>
+      <button onclick="showCheap()">Show Affordable Restaurants</button>
+      <button onclick="showCanadian()">Show All Canadian Restaurants</button>
+      <div id="map"></div>
+    </div>
+
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
+    <script src="/script.js"></script>
+
+    <script async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA81uxRaknk0hRxBxflcXjLjsSoM6Mz1F4&libraries=places&callback=initMap">
+    </script>
   </body>
 </html>
