--- a/canfindfrontend/index.html
+++ b/canfindfrontend/index.html
@@ -24,8 +24,11 @@
     <h1>Explore Canada</h1>
 
     <div>
-      <button onclick="showCheap()">Show Affordable Restaurants</button>
-      <button onclick="showCanadian()">Show All Canadian Restaurants</button>
+      <button onclick="showCheap()">Affordable</button>
+      <button onclick="showCanadian()">Canadian</button>
+      <button onclick="showChinese()">Chinese</button>
+      <button onclick="showItalian()">Italian</button>
+      <button onclick="showIndian()">Indian</button>
       <div id="map"></div>
     </div>
 
