--- a/canfindfrontend/index.html
+++ b/canfindfrontend/index.html
@@ -5,38 +5,255 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore Canada - CanFind</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="App.css" />
-    
+
     <style>
-      #map {
-        height: 75vh;
-        width: 100%;
+      /* ---------- THEME (Canada + fall accent) ---------- */
+      :root{
+        --canada-red:#d32f2f;       /* primary brand red */
+        --canada-red-dark:#b71c1c;  /* darker hover */
+        --maple-gold:#f5a524;       /* warm fall accent */
+        --ink:#111317;              /* near-black */
+        --text:#1f2328;
+        --muted:#69707d;
+        --bg:#fffdfb;               /* warm white */
+        --surface:#ffffff;
+        --overlay:rgba(0,0,0,.45);
       }
-      button {
-        margin: 10px;
-        padding: 8px 16px;
-        font-size: 14px;
-        border-radius: 8px;
+
+      /* ---------- RESET ---------- */
+      *{box-sizing:border-box}
+      html,body{height:100%}
+      body{
+        margin:0;
+        font-family:"Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+        background:var(--bg);
+        color:var(--text);
+        line-height:1.4;
+      }
+
+      /* ---------- NAVBAR ---------- */
+      .navbar{
+        position:fixed; top:0; left:0; width:100%;
+        height:64px;
+        display:flex; align-items:center; justify-content:space-between;
+        padding:0 22px;
+        background:linear-gradient(180deg, var(--canada-red) 0%, var(--canada-red-dark) 100%);
+        color:#fff;
+        z-index:1000;
+        box-shadow:0 8px 22px rgba(0,0,0,.18);
+        animation:slideDown .5s ease both;
+        backdrop-filter:saturate(1.1);
+      }
+      @keyframes slideDown{from{transform:translateY(-100%);opacity:0} to{transform:translateY(0);opacity:1}}
+
+      .brand{
+        display:flex; align-items:center; gap:10px; font-weight:800; letter-spacing:.2px;
+      }
+      .brand .leaf{
+        width:22px; height:22px; display:inline-block; transform:rotate(0deg);
+        background:conic-gradient(from 0deg at 50% 50%, #fff 0 25%, transparent 0 100%);
+        -webkit-mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path fill="white" d="M12 2l2.39 4.84L20 7.27l-4 3.9.94 5.48L12 14.77 7.06 16.65 8 11.17 4 7.27l5.61-.43z"/></svg>') center/contain no-repeat;
+                mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path fill="white" d="M12 2l2.39 4.84L20 7.27l-4 3.9.94 5.48L12 14.77 7.06 16.65 8 11.17 4 7.27l5.61-.43z"/></svg>') center/contain no-repeat;
+      }
+
+      .nav-left{display:flex; gap:26px; align-items:center; margin-left:10px}
+      .link{
+        color:#fff; text-decoration:none; font-weight:600; position:relative; padding:6px 2px;
+      }
+      .link::after{
+        content:""; position:absolute; left:0; bottom:-4px; height:2px; width:0%;
+        background:var(--maple-gold); border-radius:2px; transition:width .22s ease;
+      }
+      .link:hover::after{width:100%}
+
+      /* Hamburger button (always visible) */
+      .menu-btn{
+        display:inline-flex; align-items:center; justify-content:center;
+        width:44px; height:44px; border:0; border-radius:10px;
+        background:transparent; cursor:pointer; outline:none;
+      }
+      .menu-btn:hover{background:rgba(255,255,255,.12)}
+      .menu-icon, .menu-icon::before, .menu-icon::after{
+        content:""; display:block; width:24px; height:2.5px; border-radius:2px;
+        background:#fff; position:relative; transition:.2s ease;
+      }
+      .menu-icon::before{position:absolute; top:-7px}
+      .menu-icon::after{position:absolute; top:7px}
+
+      /* Hide left links on small screens, keep hamburger */
+      @media (max-width: 820px){ .nav-left{display:none} }
+
+      /* ---------- DRAWER + OVERLAY ---------- */
+      .overlay{position:fixed; inset:0; background:var(--overlay);
+        opacity:0; visibility:hidden; transition:.25s; z-index:1090;}
+      .overlay.show{opacity:1; visibility:visible}
+
+      .sidebar{
+        position:fixed; top:0; right:0; height:100%; width:320px;
+        transform:translateX(100%); transition:transform .28s ease;
+        background:var(--surface); z-index:1100;
+        box-shadow:-8px 0 24px rgba(0,0,0,.2);
+        display:flex; flex-direction:column;
+      }
+      .sidebar.open{transform:translateX(0)}
+      .drawer-head{
+        height:64px; padding:0 18px; display:flex; align-items:center; justify-content:space-between;
+        background:var(--canada-red); color:#fff; font-weight:700;
+      }
+      .closebtn{
+        width:36px; height:36px; border:0; border-radius:8px; background:transparent; color:#fff; font-size:24px; cursor:pointer;
+      }
+      .drawer-links{padding:10px}
+      .drawer-links a{
+        display:flex; align-items:center; gap:10px;
+        padding:12px 12px; margin:4px 0; border-radius:10px; text-decoration:none;
+        color:var(--ink); font-weight:600;
+        background:#f7f7f8;
+      }
+      .drawer-links a:hover{background:#eceef2}
+      .kicker{padding:10px 14px; color:var(--muted); font-size:.9rem}
+
+      /* ---------- HERO ---------- */
+      .hero{
+        margin-top:64px; /* space for navbar */
+        padding:42px 20px 20px;
+        display:grid; grid-template-columns: 1.05fr 1.4fr; gap:28px;
+        max-width:1280px; margin-inline:auto;
+        align-items:center;
+      }
+      @media (max-width: 960px){ .hero{grid-template-columns:1fr; padding-top:28px} }
+
+      .title{
+        font-size: clamp(2.2rem, 4.5vw, 3.2rem);
+        font-weight:800; color:var(--ink); margin:0 0 10px;
+        animation:fadeUp .6s ease both .1s;
+      }
+      .subtitle{
+        color:var(--muted); margin:0 0 18px; font-size:1.05rem; max-width:36ch;
+        animation:fadeUp .6s ease both .18s;
+      }
+      @keyframes fadeUp{from{opacity:0; transform:translateY(8px)} to{opacity:1; transform:translateY(0)}}
+
+      .chips{display:flex; flex-wrap:wrap; gap:10px; margin:8px 0 18px; animation:fadeUp .6s ease both .22s;}
+      .chip{
+        background:var(--maple-gold); color:#111; border:none; border-radius:999px;
+        padding:8px 14px; font-weight:700; cursor:pointer;
+        box-shadow:0 2px 6px rgba(0,0,0,.14);
+        transition:transform .08s ease, filter .2s ease, background .15s ease;
+      }
+      .chip:hover{filter:brightness(1.05)}
+      .chip:active{transform:translateY(1px)}
+
+      /* ---------- MAP ---------- */
+      #map{
+        height:70vh; width:100%; border-radius:16px;
+        background:#e7e7e7;
+        box-shadow:0 8px 28px rgba(0,0,0,.16);
+        animation:fadeUp .6s ease both .25s;
+      }
+
+      /* ---------- FOOT HELP ---------- */
+      .helper{
+        max-width:1280px; margin:18px auto; padding:0 20px; color:var(--muted); font-size:.95rem;
       }
     </style>
   </head>
+
   <body>
-    <h1>Explore Canada</h1>
+    <!-- NAVBAR -->
+    <nav class="navbar" role="navigation" aria-label="Main">
+      <div class="brand">
+        <span class="leaf" aria-hidden="true"></span>
+        <span>CanFind</span>
+      </div>
 
-    <div>
-      <button onclick="showCheap()">Affordable</button>
-      <button onclick="showCanadian()">Canadian</button>
-      <button onclick="showChinese()">Chinese</button>
-      <button onclick="showItalian()">Italian</button>
-      <button onclick="showIndian()">Indian</button>
-      <div id="map"></div>
-    </div>
+      <div class="nav-left" aria-label="Primary">
+        <a class="link" href="#">Food</a>
+        <a class="link" href="#">Travel</a>
+        <a class="link" href="#">Community</a>
+        <a class="link" href="#">Connect</a>
+      </div>
 
-    <div id="root"></div>
+      <button id="menu-button" class="menu-btn" aria-label="Open menu">
+        <span class="menu-icon"></span>
+      </button>
+    </nav>
 
+    <!-- DRAWER -->
+    <div id="overlay" class="overlay" aria-hidden="true"></div>
+    <aside id="sidebar" class="sidebar" aria-hidden="true">
+      <div class="drawer-head">
+        <span>Menu</span>
+        <button id="close-sidebar" class="closebtn" aria-label="Close">×</button>
+      </div>
+      <div class="drawer-links">
+        <!-- Only items NOT in the top navbar -->
+        <a href="#">👤 Profile (Sign In / Sign Out)</a>
+        <a href="#">🌐 Change Language</a>
+        <a href="https://www.utoronto.ca/about-u-of-t/quick-facts" target="_blank">📘 About U of T</a>
+        <a href="#">🛠️ Settings</a>
+        <a href="#">♿ Accessibility</a>
+        <a href="#">📨 Help & Contact</a>
+      </div>
+      <div class="kicker">Serving new immigrants & international students in the GTA.</div>
+    </aside>
+
+    <!-- HERO + MAP -->
+    <section class="hero" aria-label="Explore Canada">
+      <header>
+        <h1 class="title">Explore Canada</h1>
+        <p class="subtitle">
+          Quick picks for food, festivals, and community support across the GTA —
+          built for newcomers and students.
+        </p>
+
+        <div class="chips">
+          <button class="chip" onclick="showCheap()">Affordable</button>
+          <button class="chip" onclick="showCanadian()">Canadian</button>
+          <button class="chip" onclick="showChinese()">Chinese</button>
+          <button class="chip" onclick="showItalian()">Italian</button>
+          <button class="chip" onclick="showIndian()">Indian</button>
+        </div>
+      </header>
+
+      <div id="map" role="region" aria-label="Map of nearby options"></div>
+    </section>
+
+    <p class="helper">Tip: click the categories above to drop pins on the map. Use the menu for profile, language, and help.</p>
+
+    <!-- SCRIPTS -->
     <script type="module" src="/src/main.jsx"></script>
     <script src="/script.js"></script>
+    <script>
+      // Drawer logic
+      const sidebar = document.getElementById("sidebar");
+      const menuButton = document.getElementById("menu-button");
+      const closeSidebar = document.getElementById("close-sidebar");
+      const overlay = document.getElementById("overlay");
 
+      function openMenu(){
+        sidebar.classList.add("open");
+        overlay.classList.add("show");
+        sidebar.setAttribute("aria-hidden","false");
+        overlay.setAttribute("aria-hidden","false");
+      }
+      function closeMenu(){
+        sidebar.classList.remove("open");
+        overlay.classList.remove("show");
+        sidebar.setAttribute("aria-hidden","true");
+        overlay.setAttribute("aria-hidden","true");
+      }
+      menuButton.addEventListener("click", openMenu);
+      closeSidebar.addEventListener("click", closeMenu);
+      overlay.addEventListener("click", closeMenu);
+      document.addEventListener("keydown", (e)=>{ if(e.key === "Escape") closeMenu(); });
+    </script>
+
+    <!-- Google Maps -->
     <script async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA81uxRaknk0hRxBxflcXjLjsSoM6Mz1F4&libraries=places&callback=initMap">
     </script>
