--- a/canfindfrontend/index.html
+++ b/canfindfrontend/index.html
@@ -149,6 +149,18 @@
       #map{
         height:70vh; width:100%; border-radius:14px; background:#e7e7e7; box-shadow:var(--shadow);
       }
+
+        #language-selector {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 999;
+        background: white;
+        padding: 5px 10px;
+        border-radius: 6px;
+        font-size: 14px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      }
     </style>
   </head>
 
@@ -193,6 +205,20 @@
             <button class="action" onclick="showLandmarks && showLandmarks()">Landmarks</button>
             <button class="action" onclick="showTransit && showTransit()">Transit & Passes</button>
           </div>
+        </div>
+
+        <div id="language-selector">
+          <label for="language">🌐 Language:</label>
+          <select id="language" onchange="changeLanguage(this.value)">
+            <option value="en" selected>English</option>
+            <option value="fr">French</option>
+            <option value="es">Spanish</option>
+            <option value="zh-CN">Chinese (Simplified)</option>
+            <option value="zh-TW">Chinese (Traditional)</option>
+            <option value="hi">Hindi</option>
+            <option value="ja">Japanese</option>
+            <option value="ko">Korean</option>
+          </select>
         </div>
 
         <!-- COMMUNITY (with Universities submenu) -->
