Changing background image

--- a/canfindfrontend/index.html
+++ b/canfindfrontend/index.html
@@ -121,8 +121,8 @@
       /* MAIN / HERO */
       main{margin-top:66px}
       .hero{
-        position:relative; min-height:calc(100dvh - 66px);
-        background:url("/images/Toronto_Banner.png") center/cover no-repeat;
+        position:relative; min-height:calc(120dvh - 66px);
+        background:url("/images/CanFind_BackImage.jpg") center/cover no-repeat;
         display:grid; place-items:center; overflow:hidden;
       }
       .hero::after{content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.15), rgba(0,0,0,.45))}
