--- a/canfindfrontend/dashboard.html
+++ b/canfindfrontend/dashboard.html
@@ -13,7 +13,7 @@
     body{margin:0; font-family:"Source Sans 3",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:#fff}
     .hero{
       position:relative; min-height:100vh;
-      background:url("/images/Toronto_Banner.png") center/cover no-repeat;
+      background:url("/images/CanFind_BackImage.jpg") center/cover no-repeat;
       display:grid; place-items:center; overflow:hidden;
     }
     .hero::after{content:""; position:absolute; inset:0;
